--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     <h1><span class="blue">&lt;</span>[WAM] Portfolio 1<span class="blue">&gt;</span> <span class="yellow">COVID-19 Visualization by state</pan></h1>
     <h2>Created by <a href="http://pablogarciafernandez.com" target="_blank">Pradeep Senthil</a></h2>
 
-    <h3>How to use:</h3>
+    <h3>How to use:
+        1) Click on the desired state you want to get the data on.
+        2) On the top right hand chart it should show the Deaths by race which is distributed by population.
+        3) On the bottom right hand chart it should show the racial demographic of the state. 
+        4) If you hover over a state it should show the number of deaths per county and rank them by the highest number of deaths.
+    </h3>
 
     <div
       class="tableauPlaceholder"
