--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <h1><span class="blue">&lt;</span>[WAM] Portfolio 1<span class="blue">&gt;</span> <span class="yellow">COVID-19 Visualization by state</pan></h1>
     <h2>Created by <a href="http://pablogarciafernandez.com" target="_blank">Pradeep Senthil</a></h2>
 
-    <h3>How to use:
-        1) Click on the desired state you want to get the data on.
-        2) On the top right hand chart it should show the Deaths by race which is distributed by population.
-        3) On the bottom right hand chart it should show the racial demographic of the state. 
-        4) If you hover over a state it should show the number of deaths per county and rank them by the highest number of deaths.
+    <h3>How to use:<br>
+        1) Click on the desired state you want to get the data on.<br>
+        2) On the top right hand chart it should show the Deaths by race which is distributed by population.<br>
+        3) On the bottom right hand chart it should show the racial demographic of the state. <br>
+        4) If you hover over a state it should show the number of deaths per county and rank them by the highest number of deaths.<br>
     </h3>
 
     <div
@@ -47,6 +47,11 @@
           value="en" /><param name="filter" value="publish=yes"
       /></object>
     </div>
+
+    <h3>What this means for COVID in the USA:
+        As you can see from the charts presented, there are many ways one ca 
+    </h3>
+
     <script type="text/javascript">
       var divElement = document.getElementById("viz1593993485865");
       var vizElement = divElement.getElementsByTagName("object")[0];
