--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h1><span class="blue">&lt;</span>[WAM] Portfolio 1<span class="blue">&gt;</span> <span class="yellow">COVID-19 Visualization by state</pan></h1>
     <h2>Created by <a href="http://pablogarciafernandez.com" target="_blank">Pradeep Senthil</a></h2>
 
+    <iframe src="https://docs.google.com/document/d/e/2PACX-1vQORcTs1cDgMpwNWKVtl8BR7Z2uGnvxQFbAUmX5JgsAbtGDaD9hMugquDwfQlL4-cdQM9wY-yZJ4h_D/pub?embedded=true"></iframe>
+
     <h3>How to use:<br>
         1) Click on the desired state you want to get the data on.<br>
         2) On the top right hand chart it should show the Deaths by race which is distributed by population.<br>
@@ -71,6 +73,8 @@
         "https://public.tableau.com/javascripts/api/viz_v1.js";
       vizElement.parentNode.insertBefore(scriptElement, vizElement);
     </script>
+
+    
   </body>
 </html>
 
