Added more iframe fixes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <h1><span class="blue">&lt;</span>[WAM] Portfolio 1<span class="blue">&gt;</span> <span class="yellow">COVID-19 Visualization by state</pan></h1>
     <h2>Created by <a href="http://pablogarciafernandez.com" target="_blank">Pradeep Senthil</a></h2>
 
-    <iframe src="https://docs.google.com/document/d/e/2PACX-1vQORcTs1cDgMpwNWKVtl8BR7Z2uGnvxQFbAUmX5JgsAbtGDaD9hMugquDwfQlL4-cdQM9wY-yZJ4h_D/pub?embedded=true"></iframe>
+    <div>
+        <iframe src="https://docs.google.com/document/d/e/2PACX-1vQORcTs1cDgMpwNWKVtl8BR7Z2uGnvxQFbAUmX5JgsAbtGDaD9hMugquDwfQlL4-cdQM9wY-yZJ4h_D/pub?embedded=true" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:200px;width:100%;border:none;overflow:hidden;"></iframe>
+    </div>
 
     <h3>How to use:<br>
         1) Click on the desired state you want to get the data on.<br>
@@ -73,6 +75,7 @@
         "https://public.tableau.com/javascripts/api/viz_v1.js";
       vizElement.parentNode.insertBefore(scriptElement, vizElement);
     </script>
+
 
     
   </body>
