Added another document

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <h2>Created by <a href="http://pablogarciafernandez.com" target="_blank">Pradeep Senthil</a></h2>
 
     <div>
-        <iframe src="https://docs.google.com/document/d/e/2PACX-1vQORcTs1cDgMpwNWKVtl8BR7Z2uGnvxQFbAUmX5JgsAbtGDaD9hMugquDwfQlL4-cdQM9wY-yZJ4h_D/pub?embedded=true" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:200px;width:100%;border:none;overflow:hidden;"></iframe>
+        <iframe src="https://docs.google.com/document/d/e/2PACX-1vQORcTs1cDgMpwNWKVtl8BR7Z2uGnvxQFbAUmX5JgsAbtGDaD9hMugquDwfQlL4-cdQM9wY-yZJ4h_D/pub?embedded=true" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:500px;width:49%;border:none;overflow:hidden;"></iframe>
+        <iframe src="https://docs.google.com/document/d/e/2PACX-1vQ1Nfon_d95-6lO9-P0ktJweq1WNRzXwdX5bKOUlAnol9L9Bj6vgwpJyJgorhD5folHMqWVFH8W7FZe/pub?embedded=true" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:500px;width:49%;border:none;overflow:hidden;"></iframe>
     </div>
 
-    <h3>How to use:<br>
+    <h3>How to use the chart below:<br>
         1) Click on the desired state you want to get the data on.<br>
         2) On the top right hand chart it should show the Deaths by race which is distributed by population.<br>
         3) On the bottom right hand chart it should show the racial demographic of the state. <br>
