--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
 					<!-- Work -->
 						<article id="Portfolio1">
 							<h1 class="major">Portfolio 1 - Play</h1>
-							<h2 class="major">Data Visualization</h2>
-							<p>If the graphs look weird please reload the page for best results!</p>
+							<h2 class="major">Data Visualization (RELOAD PAGE - If Graph looks weird)</h2>
 						
 							<div
 							class="tableauPlaceholder"
@@ -76,12 +75,12 @@
 							/></object>
 							</div>
 
+							<h2 class="major"><br>Statement of Goals and Choices<br></h2>
+							<iframe src="https://docs.google.com/document/d/e/2PACX-1vQORcTs1cDgMpwNWKVtl8BR7Z2uGnvxQFbAUmX5JgsAbtGDaD9hMugquDwfQlL4-cdQM9wY-yZJ4h_D/pub?embedded=true" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:1000px;width:60%;border:none;overflow:hidden;"></iframe>
+
 							<h2 class="major">Reflective Essay</h2>
 							<iframe src="https://docs.google.com/document/d/e/2PACX-1vQ1Nfon_d95-6lO9-P0ktJweq1WNRzXwdX5bKOUlAnol9L9Bj6vgwpJyJgorhD5folHMqWVFH8W7FZe/pub?embedded=true" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:1000px;width:60%;border:none;overflow:hidden;"></iframe>
 							
-							<h2 class="major">Statement of Goals and Choices<br></h2>
-							<iframe src="https://docs.google.com/document/d/e/2PACX-1vQORcTs1cDgMpwNWKVtl8BR7Z2uGnvxQFbAUmX5JgsAbtGDaD9hMugquDwfQlL4-cdQM9wY-yZJ4h_D/pub?embedded=true" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:1000px;width:60%;border:none;overflow:hidden;"></iframe>
-
 							<h2 class="major">Informal Writingn</h2>
 							<span class="image main"><img src="images/IMG_0297.PNG" alt="" /></span>
 
