--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 							<h2 class="major">Map of police killings in 2019</h2>
 							<h3 class="major">The slider will automatically start moving through the timeline once the page loads.<br/>The dots colored in "red" are minorty deaths<br/>the dots colored in "blue" are deaths who's race is white.<br/>Hover over the colored dots to see more information about the person who died.</h3>
 							<div>
-								<iframe src="https://pradeepsen99.github.io/d3.js_dataVisualization/" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:700px;width:1300px;border:none;overflow:hidden;"></iframe>
+								<iframe src="https://pradeepsen99.github.io/d3.js_dataVisualization/"</iframe>
 							</div>
 
 							<h2 class="major"><br>Statement of Goals and Choices<br></h2>
