--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 							<iframe src="https://docs.google.com/document/d/e/2PACX-1vSFsCHeTDq78APkl8vc1V3BBRj59BAYniXlvpe0HN67k72loT9OEwbrzDkqAMNvtgSJ4uKUpevCAEgC/pub?embedded=true" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:1000px;width:60%;border:none;overflow:hidden;"></iframe>
 
 							<h2 class="major"><br>Informal Writing</h2>
-							<span class="image main"><img src="images/IMG_0297.PNG" alt="" /></span>
+							<span class="image main"><img src="images/IMG_0298.PNG" style="height:1000px;width:60%;border:none;overflow:hidden;" /></span>
 
 							<h2 class="major"><br>Forum revision</h2>
 							<iframe src="https://docs.google.com/document/d/e/2PACX-1vSlN04fTrzX7Z9nHAnsBSwH1x-LoE3ZdrTTOmk_tIbKTDMgI6e6lZyopingJcnk-_79ddb_E-pUP5BM/pub?embedded=true" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:1000px;width:60%;border:none;overflow:hidden;"></iframe>
