Added some small changes

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 					</div>
 					<nav>
 						<ul>
-							<li><a href="#intro">Intro</a></li>
 							<li><a href="#Portfolio1">Portfolio 1 - Play</a></li>
 							<li><a href="#Portfolio2">Portfolio 2 - Practice</a></li>
+							<li><a href="#Portfolio3">Portfolio 3 - Perform</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -134,6 +134,13 @@
 								loadURL(iframe.src);
 								</script>
 						</article>
+
+					<!-- Portfolio 3 -->
+					<article id="Portfolio3">
+						<h1 class="major">Portfolio 3 - Perform</h1>
+					</article>
+
+
 				</div>
 
 			<!-- Footer -->
