--- a/index.html
+++ b/index.html
@@ -137,7 +137,60 @@
 
 					<!-- Portfolio 3 -->
 					<article id="Portfolio3">
-						<h1 class="major">Portfolio 3 - Perform</h1>
+						<h1 class="major" href="https://pradeepsen99.github.io/d3.js_dataVisualization">Portfolio 3 - Perform</h1>
+						<h3 class="major">The link to access the project is below<br> 
+							Link: <a href="https://pradeepsen99.github.io/d3.js_dataVisualization">Portfolio 3 - Perform (https://pradeepsen99.github.io/d3.js_dataVisualization)</a><br>
+						</h3>
+						<h2><br>Some Things to know before looking at the website:</h2>
+						<h3>
+							1) If the website is not working then please refresh it <br>
+							<a href="https://en.wikipedia.org/wiki/Choropleth_map">2) Cloropleth (Click on me!!)</a><br>
+							3) There is a slider on the bottom of the screen that you can use to go to the next slide<br>
+							4) There is an issue where if the screen is small the slider will be pushed upto the map, try using a bigger screen if possible
+						</h3>
+						<h2><br><br>Data Sources:</h2>
+						<h3>
+							1) <a href="https://github.com/pradeepsen99/d3.js_dataVisualization/blob/master/police_brut.csv">https://github.com/pradeepsen99/d3.js_dataVisualization/blob/master/police_brut.csv</a><br>
+							2) <a href="https://github.com/pradeepsen99/d3.js_dataVisualization/blob/master/kill_state.csv">https://github.com/pradeepsen99/d3.js_dataVisualization/blob/master/kill_state.csv</a><br>
+							3) <a href="https://github.com/pradeepsen99/d3.js_dataVisualization/blob/master/kill_department.csv">https://github.com/pradeepsen99/d3.js_dataVisualization/blob/master/kill_department.csv</a><br>
+							4) <a href="https://github.com/pradeepsen99/d3.js_dataVisualization/blob/master/police-violence-report-2017.xlsx">https://github.com/pradeepsen99/d3.js_dataVisualization/blob/master/police-violence-report-2017.xlsx</a>
+						</h3>
+
+						<h2 class="major"><br>Statement of Goals and Choices<br></h2>
+						<iframe src="https://docs.google.com/document/d/e/2PACX-1vSsoE_vTmZHmNigs6um5enIvcQvQPZhjk41Nj0f7nvW_rc-HCUFMrcugNAN5SzQmF65mgW7GMbCEiFa/pub?embedded=true" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:1000px;width:60%;border:none;overflow:hidden;"></iframe>
+
+						<h2 class="major"><br>Reflective Essay</h2>
+						<iframe src="https://docs.google.com/document/d/e/2PACX-1vSQzXopvrgmxo9CtUKsDb0ezti9KHI82tstL-0Hn1qjwXo7ca-miRKqndNAd7SAzLFCNMq0YDthBBVW/pub?embedded=true" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:1000px;width:60%;border:none;overflow:hidden;"></iframe>
+
+						<h2 class="major"><br>Informal Writing</h2>
+						<span class="image main"><img src="images/IMG_0298.PNG" style="height:1000px;width:60%;border:none;overflow:hidden;" /></span>
+
+						<h2 class="major"><br>Forum revision</h2>
+						<iframe src="https://docs.google.com/document/d/e/2PACX-1vRmhD1_ReIQe7DUbGs_TwwWyv2yWfe9mH-v7QG3znITf6QJj2JXTUbiBMwdtorMRHNtzYlzBvq9hG3P/pub?embedded=true" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:1000px;width:60%;border:none;overflow:hidden;"></iframe>
+						
+						<script>
+							var iframe = document.getElementsByTagName('iframe')[0];
+							var url = iframe.src;
+							var getData = function (data) {
+								if (data && data.query && data.query.results && data.query.results.resources && data.query.results.resources.content && data.query.results.resources.status == 200) loadHTML(data.query.results.resources.content);
+								else if (data && data.error && data.error.description) loadHTML(data.error.description);
+								else loadHTML('Error: Cannot load ' + url);
+							};
+							var loadURL = function (src) {
+								url = src;
+								var script = document.createElement('script');
+								script.src = 'https://query.yahooapis.com/v1/public/yql?q=select%20*%20from%20data.headers%20where%20url%3D%22' + encodeURIComponent(url) + '%22&format=json&diagnostics=true&env=store%3A%2F%2Fdatatables.org%2Falltableswithkeys&callback=getData';
+								document.body.appendChild(script);
+							};
+							var loadHTML = function (html) {
+								iframe.src = 'about:blank';
+								iframe.contentWindow.document.open();
+								iframe.contentWindow.document.write(html.replace(/<head>/i, '<head><base href="' + url + '"><scr' + 'ipt>document.addEventListener("click", function(e) { if(e.target && e.target.nodeName == "A") { e.preventDefault(); parent.loadURL(e.target.href); } });</scr' + 'ipt>'));
+								iframe.contentWindow.document.close();
+							}
+							
+							loadURL(iframe.src);
+							</script>
 					</article>
 
 
