--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 						<iframe src="https://docs.google.com/document/d/e/2PACX-1vSQzXopvrgmxo9CtUKsDb0ezti9KHI82tstL-0Hn1qjwXo7ca-miRKqndNAd7SAzLFCNMq0YDthBBVW/pub?embedded=true" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:1000px;width:60%;border:none;overflow:hidden;"></iframe>
 
 						<h2 class="major"><br>Informal Writing</h2>
-						<span class="image main"><img src="images/IMG_0298.PNG" style="height:1000px;width:60%;border:none;overflow:hidden;" /></span>
+						<span class="image main"><img src="images/PNG_image.png" style="height:1000px;width:60%;border:none;overflow:hidden;" /></span>
 
 						<h2 class="major"><br>Forum revision</h2>
 						<iframe src="https://docs.google.com/document/d/e/2PACX-1vRmhD1_ReIQe7DUbGs_TwwWyv2yWfe9mH-v7QG3znITf6QJj2JXTUbiBMwdtorMRHNtzYlzBvq9hG3P/pub?embedded=true" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:1000px;width:60%;border:none;overflow:hidden;"></iframe>
